Update MDK for 1.19 changes
Signed-off-by: SizableShrimp <sizableshrimp@sizableshrimp.me>